# Sorting

./: .gitignore  CMakeLists.txt  README.md
include/: MultiSorter.h  Printer.h  RandomListGenerator.h
src/: MultiSorter.cpp  Printer.cpp  RandomListGenerator.cpp  main.cpp
